# cicd-test-new

./: CMakeLists.txt  Jenkinsfile  README.md
scripts/: build.sh  deploy.sh  test.sh
src/: main.cpp  math.cpp  math.h
tests/: CMakeLists.txt  math_test.cpp
